src/objects/cscfga__Product_Basket__c.object
<CustomObject>
    <fields>
        <fullName>cscfga__Total_Price__c</fullName>
        <inlineHelpText>Sum of non-recurring and one year&apos;s worth of recurring prices of all items contained in this Basket.</inlineHelpText>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>cscfga__User_Session__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Details about user session within which this Bundle was created.</inlineHelpText>
        <label>User Session</label>
        <referenceTo>cscfga__User_Session__c</referenceTo>
        <relationshipLabel>Product Baskets</relationshipLabel>
        <relationshipName>Product_Baskets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cscfga__total_contract_value__c</fullName>
        <label>Total Contract Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Product Baskets</relationshipLabel>
        <relationshipName>Product_Baskets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Basket_Stage__c</fullName>
        <description>In standalone basket scenario, use this picklist to trigger order generation</description>
        <inlineHelpText>In standalone basket scenario, use this picklist to trigger order generation</inlineHelpText>
        <label>Basket Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Prospecting</fullName>
                    <default>true</default>
                    <label>Prospecting</label>
                </value>
                <value>
                    <fullName>Closed Won</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>csordtelcoa__Change_Type__c</fullName>
        <label>Change Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Change</fullName>
                </value>
                <value>
                    <fullName>Migrate</fullName>
                </value>
                <value>
                    <fullName>Terminate</fullName>
                </value>
                <value>
                    <fullName>Clone</fullName>
                </value>
                <value>
                    <fullName>Move</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Add</fullName>
                </value>
                <value>
                    <fullName>Upgrade</fullName>
                </value>
                <value>
                    <fullName>Downgrade</fullName>
                </value>
                <value>
                    <fullName>Relocation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>csordtelcoa__Order_Generation_Batch_Job_Id__c</fullName>
        <label>Order Generation Batch Job Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Process_Order_Generation_In_Batch__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the opportunity is set to be processed in batch mode</description>
        <inlineHelpText>Force batch processing of the opportunity</inlineHelpText>
        <label>Process Order Generation In Batch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Product_Configuration_Clone_Batch_Job_Id__c</fullName>
        <label>Product Configuration Clone Batch Job Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Product_Configuration_Clone_In_Batch__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the product configuration cloning is set to be processed in batch mode</description>
        <inlineHelpText>Force generation of MACD basket in a batch</inlineHelpText>
        <label>Product Configuration Clone In Batch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Subscription_To_Be_Added_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscription To Be Added To</label>
        <referenceTo>csord__Subscription__c</referenceTo>
        <relationshipLabel>Product Baskets (Subscription To Be Added To)</relationshipLabel>
        <relationshipName>Product_Baskets1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Subscription_To_Be_Changed__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscription To Be Changed</label>
        <referenceTo>csord__Subscription__c</referenceTo>
        <relationshipLabel>Product Baskets</relationshipLabel>
        <relationshipName>Product_Baskets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Synchronised_with_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Synchronised with Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>spt_Quote_Status__c</fullName>
        <label>Quote Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Product Basket</label>
    <listViews>
        <fullName>cscfga__All</fullName>
        <columns>NAME</columns>
        <columns>cscfga__User_Session__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>cscfga__Total_Price__c</columns>
        <columns>cscfga__Opportunity__c</columns>
        <columns>cscfga__Basket_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Product Basket Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Baskets</pluralLabel>
    <recordTypes>
        <fullName>CSAPostConfiguration</fullName>
        <active>true</active>
        <label>CSAPostConfiguration</label>
    </recordTypes>
    <recordTypes>
        <fullName>CSAPreConfiguration</fullName>
        <active>false</active>
        <label>CSAPreConfiguration</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>